{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 28,
  "lineage": "03faec09-02e8-b236-32a9-8d97cc246ad0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "YOUSRA-INSTANCE-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-02a87cc415ee741ef",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a87cc415ee741ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0558eb130236a5caf",
            "private_dns": "ip-10-0-2-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a9f7034ebf545f28",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb5230ce57b685b4",
            "tags": {
              "Name": "YOUSRA-INSTANCE-AZ-A"
            },
            "tags_all": {
              "Name": "YOUSRA-INSTANCE-AZ-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0781a6f3511fffb45"
            ]
          },
          "dependencies": [
            "aws_instance.YOUSRA-INSTANCE-PUBLIC",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-AZ-A",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "YOUSRA-INSTANCE-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-0054f23aed4d66841",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0054f23aed4d66841",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0710d3ec43f1b8fd7",
            "private_dns": "ip-10-0-3-149.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0040628ab5bb26df8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098b6f6cb782eecfa",
            "tags": {
              "Name": "YOUSRA-INSTANCE-AZ-B"
            },
            "tags_all": {
              "Name": "YOUSRA-INSTANCE-AZ-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0781a6f3511fffb45"
            ]
          },
          "dependencies": [
            "aws_instance.YOUSRA-INSTANCE-PUBLIC",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-AZ-B",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "YOUSRA-INSTANCE-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-080479cd81b41ca1b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080479cd81b41ca1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088d8dd56367ac671",
            "private_dns": "ip-10-0-4-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021af203ba79d52ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0471154fc2edebf79",
            "tags": {
              "Name": "YOUSRA-INSTANCE-AZ-C"
            },
            "tags_all": {
              "Name": "YOUSRA-INSTANCE-AZ-C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0781a6f3511fffb45"
            ]
          },
          "dependencies": [
            "aws_instance.YOUSRA-INSTANCE-PUBLIC",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-AZ-C",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "YOUSRA-INSTANCE-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:055574845309:instance/i-03b5b96f60f2878a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b5b96f60f2878a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-yousra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0183bf2ceed61cdc8",
            "private_dns": "ip-10-0-1-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.239",
            "public_ip": "34.203.209.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005d5f9b76b58eb6d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f98c8f5d5c60c5e",
            "tags": {
              "Name": "YOUSRA-INSTANCE-PUBLIC"
            },
            "tags_all": {
              "Name": "YOUSRA-INSTANCE-PUBLIC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1e6edb74b1169a0"
            ]
          },
          "dependencies": [
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "YOUSRA-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:internet-gateway/igw-081d77762997d261d",
            "id": "igw-081d77762997d261d",
            "owner_id": "055574845309",
            "tags": {
              "Name": "YOUSRA-IGW"
            },
            "tags_all": {
              "Name": "YOUSRA-IGW"
            },
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "YOUSRA-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:loadbalancer/app/YOUSRA-LB/27907f753ddc11f2",
            "arn_suffix": "app/YOUSRA-LB/27907f753ddc11f2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "YOUSRA-LB-1217311153.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:055574845309:loadbalancer/app/YOUSRA-LB/27907f753ddc11f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "YOUSRA-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0165ac3471e9de339"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0471154fc2edebf79"
              },
              {
                "subnet_id": "subnet-098b6f6cb782eecfa"
              },
              {
                "subnet_id": "subnet-0cb5230ce57b685b4"
              }
            ],
            "subnets": [
              "subnet-0471154fc2edebf79",
              "subnet-098b6f6cb782eecfa",
              "subnet-0cb5230ce57b685b4"
            ],
            "vpc_id": "vpc-0097edfa1fdc3c2f4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_subnet.YOUSRA-SUBNET-AZ-A",
            "aws_subnet.YOUSRA-SUBNET-AZ-B",
            "aws_subnet.YOUSRA-SUBNET-AZ-C",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "YOUSRA-LB-LISTENER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:listener/app/YOUSRA-LB/27907f753ddc11f2/87f3236ebf1d7a4f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055574845309:listener/app/YOUSRA-LB/27907f753ddc11f2/87f3236ebf1d7a4f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:loadbalancer/app/YOUSRA-LB/27907f753ddc11f2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.YOUSRA-LB",
            "aws_lb_target_group.YOUSRA-LB-TG2",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_subnet.YOUSRA-SUBNET-AZ-A",
            "aws_subnet.YOUSRA-SUBNET-AZ-B",
            "aws_subnet.YOUSRA-SUBNET-AZ-C",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "YOUSRA-LB-TG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
            "arn_suffix": "targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "YOUSRA-LB-TG2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "dependencies": [
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "YOUSRA-LB-TG2-ATTACH-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7-2023092210181761200000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
            "target_id": "i-02a87cc415ee741ef"
          },
          "dependencies": [
            "aws_instance.YOUSRA-INSTANCE-AZ-A",
            "aws_instance.YOUSRA-INSTANCE-PUBLIC",
            "aws_lb_target_group.YOUSRA-LB-TG2",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-AZ-A",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "YOUSRA-LB-TG2-ATTACH-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7-20230922101807329200000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
            "target_id": "i-0054f23aed4d66841"
          },
          "dependencies": [
            "aws_instance.YOUSRA-INSTANCE-AZ-B",
            "aws_instance.YOUSRA-INSTANCE-PUBLIC",
            "aws_lb_target_group.YOUSRA-LB-TG2",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-AZ-B",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "YOUSRA-LB-TG2-ATTACH-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7-20230922101817386500000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:055574845309:targetgroup/YOUSRA-LB-TG2/236076e73d32d5b7",
            "target_id": "i-080479cd81b41ca1b"
          },
          "dependencies": [
            "aws_instance.YOUSRA-INSTANCE-AZ-C",
            "aws_instance.YOUSRA-INSTANCE-PUBLIC",
            "aws_lb_target_group.YOUSRA-LB-TG2",
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-PUBLIC",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_subnet.YOUSRA-SUBNET-AZ-C",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "YOUSRA-RTB-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:route-table/rtb-01db02632a033edd9",
            "id": "rtb-01db02632a033edd9",
            "owner_id": "055574845309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081d77762997d261d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "YOUSRA-RTB-PUBLIC"
            },
            "tags_all": {
              "Name": "YOUSRA-RTB-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.YOUSRA-IGW",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "YOUSRA-RTB-PUBLIC-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fbbfd605815eef48",
            "route_table_id": "rtb-01db02632a033edd9",
            "subnet_id": "subnet-09f98c8f5d5c60c5e"
          },
          "dependencies": [
            "aws_internet_gateway.YOUSRA-IGW",
            "aws_route_table.YOUSRA-RTB-PUBLIC",
            "aws_subnet.YOUSRA-SUBNET-PUBLIC",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "YOUSRA-RTB-PUBLIC-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbad61863951ffdf",
            "route_table_id": "rtb-01db02632a033edd9",
            "subnet_id": "subnet-0cb5230ce57b685b4"
          },
          "dependencies": [
            "aws_internet_gateway.YOUSRA-IGW",
            "aws_route_table.YOUSRA-RTB-PUBLIC",
            "aws_subnet.YOUSRA-SUBNET-AZ-A",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "YOUSRA-RTB-PUBLIC-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0e2efc98dd542f5",
            "route_table_id": "rtb-01db02632a033edd9",
            "subnet_id": "subnet-098b6f6cb782eecfa"
          },
          "dependencies": [
            "aws_internet_gateway.YOUSRA-IGW",
            "aws_route_table.YOUSRA-RTB-PUBLIC",
            "aws_subnet.YOUSRA-SUBNET-AZ-B",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "YOUSRA-RTB-PUBLIC-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b1789037bf5779d",
            "route_table_id": "rtb-01db02632a033edd9",
            "subnet_id": "subnet-0471154fc2edebf79"
          },
          "dependencies": [
            "aws_internet_gateway.YOUSRA-IGW",
            "aws_route_table.YOUSRA-RTB-PUBLIC",
            "aws_subnet.YOUSRA-SUBNET-AZ-C",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "YOUSRA-SG-LOAD-BALANCER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0165ac3471e9de339",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0165ac3471e9de339",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922101657750200000001",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "YOUSRA-SG-LOAD-BALANCER"
            },
            "tags_all": {
              "Name": "YOUSRA-SG-LOAD-BALANCER"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "YOUSRA-SG-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0d1e6edb74b1169a0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1e6edb74b1169a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0781a6f3511fffb45"
                ],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "terraform-20230922101705746400000003",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "YOUSRA-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "YOUSRA-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_security_group.YOUSRA-SG-WEB",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "YOUSRA-SG-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:security-group/sg-0781a6f3511fffb45",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0781a6f3511fffb45",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0165ac3471e9de339"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230922101702045200000002",
            "name_prefix": "terraform-",
            "owner_id": "055574845309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "YOUSRA-SG-PUBLIC"
            },
            "tags_all": {
              "Name": "YOUSRA-SG-PUBLIC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.YOUSRA-SG-LOAD-BALANCER",
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "YOUSRA-SUBNET-AZ-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-0cb5230ce57b685b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb5230ce57b685b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YOUSRA-SUBNET-AZ-A"
            },
            "tags_all": {
              "Name": "YOUSRA-SUBNET-AZ-A"
            },
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "dependencies": [
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "YOUSRA-SUBNET-AZ-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-098b6f6cb782eecfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098b6f6cb782eecfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YOUSRA-SUBNET-AZ-B"
            },
            "tags_all": {
              "Name": "YOUSRA-SUBNET-AZ-B"
            },
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "dependencies": [
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "YOUSRA-SUBNET-AZ-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-0471154fc2edebf79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0471154fc2edebf79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YOUSRA-SUBNET-AZ-C"
            },
            "tags_all": {
              "Name": "YOUSRA-SUBNET-AZ-C"
            },
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "dependencies": [
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "YOUSRA-SUBNET-PUBLIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:subnet/subnet-09f98c8f5d5c60c5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f98c8f5d5c60c5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "055574845309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YOUSRA-SUBNET-PUBLIC"
            },
            "tags_all": {
              "Name": "YOUSRA-SUBNET-PUBLIC"
            },
            "vpc_id": "vpc-0097edfa1fdc3c2f4"
          },
          "dependencies": [
            "aws_vpc.YOUSRA-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "YOUSRA-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:055574845309:vpc/vpc-0097edfa1fdc3c2f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d89bc8aebafd53d0",
            "default_route_table_id": "rtb-08bb940ec9340ee15",
            "default_security_group_id": "sg-09346f21e8c83b9db",
            "dhcp_options_id": "dopt-062c172c5a4285b27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0097edfa1fdc3c2f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08bb940ec9340ee15",
            "owner_id": "055574845309",
            "tags": {
              "Name": "YOUSRA-VPC"
            },
            "tags_all": {
              "Name": "YOUSRA-VPC"
            }
          }
        }
      ]
    }
  ]
}